add payment params validations
