# services/payment/server/server.go
@@ -3,24 +3,55 @@ package server
 import (
 	"context"
 	"database/sql"
+	"errors"
+	"log"
 
-	"github.com/NeptuneG/go-back/gen/go/services/payment/proto"
+	live "github.com/NeptuneG/go-back/gen/go/services/live/proto"
+	payment "github.com/NeptuneG/go-back/gen/go/services/payment/proto"
+	user "github.com/NeptuneG/go-back/gen/go/services/user/proto"
 	db "github.com/NeptuneG/go-back/services/payment/db/sqlc"
 	"github.com/google/uuid"
+	"google.golang.org/grpc"
 )
 
 type PaymentService struct {
-	proto.UnimplementedPaymentServiceServer
-	store *db.Store
+	payment.UnimplementedPaymentServiceServer
+	userClient user.UserServiceClient
+	liveClient live.LiveServiceClient
+	store      *db.Store
 }
 
-func New(dbConn *sql.DB) *PaymentService {
-	return &PaymentService{
-		store: db.NewStore(dbConn),
+func New(ctx context.Context, dbConn *sql.DB) (*PaymentService, error) {
+	opts := []grpc.DialOption{
+		grpc.WithInsecure(),
+		grpc.WithBlock(),
+		grpc.WithDefaultCallOptions(grpc.WaitForReady(true)),
 	}
+
+	userConn, err := grpc.DialContext(ctx, "user-service:3377", opts...)
+	if err != nil {
+		log.Fatalln("failed to dial user service:", err)
+		return nil, err
+	}
+
+	liveConn, err := grpc.DialContext(ctx, "live-service:3377", opts...)
+	if err != nil {
+		log.Fatalln("failed to dial live service:", err)
+		return nil, err
+	}
+
+	return &PaymentService{
+		userClient: user.NewUserServiceClient(userConn),
+		liveClient: live.NewLiveServiceClient(liveConn),
+		store:      db.NewStore(dbConn),
+	}, nil
 }
 
-func (liveService *PaymentService) CreateLiveEventOrder(ctx context.Context, req *proto.CreateLiveEventOrderRequest) (*proto.CreateLiveEventOrderResponse, error) {
+func (s *PaymentService) CreateLiveEventOrder(ctx context.Context, req *payment.CreateLiveEventOrderRequest) (*payment.CreateLiveEventOrderResponse, error) {
+	if err := s.validateRequest(ctx, req); err != nil {
+		return nil, err
+	}
+
 	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
 		return nil, err
@@ -29,7 +60,7 @@ func (liveService *PaymentService) CreateLiveEventOrder(ctx context.Context, req
 	if err != nil {
 		return nil, err
 	}
-	_, err = liveService.store.CreateLiveEventOrder(ctx, db.CreateLiveEventOrderParams{
+	_, err = s.store.CreateLiveEventOrder(ctx, db.CreateLiveEventOrderParams{
 		UserID:      userID,
 		LiveEventID: liveEventID,
 		Price:       req.Price,
@@ -38,7 +69,31 @@ func (liveService *PaymentService) CreateLiveEventOrder(ctx context.Context, req
 	if err != nil {
 		return nil, err
 	}
-	return &proto.CreateLiveEventOrderResponse{
+
+	return &payment.CreateLiveEventOrderResponse{
 		Status: "ok",
 	}, nil
+}
+
+func (s *PaymentService) validateRequest(ctx context.Context, req *payment.CreateLiveEventOrderRequest) error {
+	userExistResp, err := s.userClient.IsUserExist(ctx, &user.IsUserExistRequest{
+		Id: req.UserId,
+	})
+	if err != nil {
+		return err
+	}
+	if !userExistResp.Exist {
+		return errors.New("user not exist")
+	}
+
+	liveEventExistResp, err := s.liveClient.IsLiveEventExist(ctx, &live.IsLiveEventExistRequest{
+		Id: req.LiveEventId,
+	})
+	if err != nil {
+		return err
+	}
+	if !liveEventExistResp.Exist {
+		return errors.New("live event not exist")
+	}
+	return nil
 }
